﻿<strong>01.00.00</strong>
<ul>
	<li>Initial release</li>
</ul>
<strong>01.01.00</strong>
<ul>
	<li>Improved user interface of host settings module</li>
	<li>Fixed error after module has been uninstalled</li>
	<li>Added log level, portal name and log type to searchable fields</li>
</ul>